# MatCPP

./: .gitignore  CMakeLists.txt  README.md  heuristics.h  main.cpp  matheuristics.h  milp.h  network.h  test_new_greedy.cpp  utils.h
baselines/: README.md  aco.h  brute_force.h  graph.h  metaheuristics.h  metaheuristics_multithread.h
data/: README.md  gen_eulerian.h  gen_rural.h
include/: heuristics.h  matheuristics.h  milp.h  network.h  utils.h
mald/: heuristics.h  matheuristics.h  milp.h  network.h  utils.h
